# tg_mini_app

./: README.md  pyproject.toml
src/: main.py  run_tasks.py
src/app/settings/: base.py  db.py  installed_app.py
src/ftp/api/http_view/: FtpView.py  __init__.py
src/ftp/models/: FilesModel.py  StatoinModel.py  __init__.py
src/ftp/schemas/: FtpSchemas.py
src/ftp/utils/: __init__.py  commands.py
src/tasks/: __init__.py  task_check_new_files.py  task_upd_file_data.py
src/tg_bot/: __init__.py
src/users/api/: utils.py
src/users/api/http_view/: FtpFilesView.py  RegAuthView.py  __init__.py
src/users/api/ws_view/: CheckFilesView.py  __init__.py
src/users/models/: UserFilesModel.py  UserModel.py  __init__.py
src/users/schemas/: UserSchemas.py  __init__.py
src/utils/: jwt_auth.py
src/web_interface/static/css/: styles.css
src/web_interface/static/js/: api.js  script.js  utils.js  ws.js
src/web_interface/templates/: index.html
